--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
+    "axios": "^0.19.0",
     "chart.js": "2.7.3",
     "classnames": "2.2.6",
     "history": "4.7.2",
@@ -14,15 +12,18 @@
     "nouislider": "12.1.0",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.6.2",
+    "react": "^16.11.0",
     "react-big-calendar": "0.20.2",
     "react-bootstrap-sweetalert": "4.4.1",
     "react-bootstrap-switch": "15.5.3",
     "react-bootstrap-wizard": "0.0.7",
     "react-chartjs-2": "2.7.4",
     "react-datetime": "2.16.3",
+    "react-dom": "^16.11.0",
     "react-google-maps": "9.4.5",
     "react-jvectormap": "0.0.4",
     "react-notification-alert": "0.0.9",
+    "react-scripts": "3.2.0",
     "react-select": "2.2.0",
     "react-table": "6.8.6",
     "react-tagsinput": "3.19.0",
