--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,14 @@
     "react-google-maps": "9.4.5",
     "react-jvectormap": "0.0.4",
     "react-notification-alert": "0.0.9",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "react-select": "2.2.0",
     "react-table": "6.8.6",
     "react-tagsinput": "3.19.0",
-    "reactstrap": "7.0.2"
+    "reactstrap": "7.0.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
