--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
