--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Valentin Alejandro Ruiz Ortiz",
   "license": "ISC",
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.3",
     "express": "^4.17.1",
